# VideoProcessingService

./: CMakeLists.txt  LICENSE  README.md  main.cpp
example/: CMakeLists.txt  restservertest.cpp
script/: Dockerfile  build.sh
src/Decoder/: decoderabstract.h  ffmpegdecoder.cpp  ffmpegdecoder.h
src/Demuxer/: demuxerabstract.h  ffmpegdemuxer.cpp  ffmpegdemuxer.h
src/Facade/: videoservice.cpp  videoservice.h
src/Resampler/: ffmpegresampler.cpp  ffmpegresampler.h  resamplerabstract.h
src/Thread/: audioprocessingabstract.h  ffmpegaudioprocessing.cpp  ffmpegaudioprocessing.h  ffmpegvideoprocessing.cpp  ffmpegvideoprocessing.h  videoprocessingabstract.h
src/YUV2RGB/: colorspaceconverterabstract.h  ffmpegcolorspaceconverter.cpp  ffmpegcolorspaceconverter.h
src/datastructure/: threadsafe_queue.h
test/: CMakeLists.txt  cppbackendtest.cpp
